RESOLVED FIXED50198
[Qt] Path stroke shadow has incorrect behavior when using ctx.scale(x,y)
https://bugs.webkit.org/show_bug.cgi?id=50198
Summary [Qt] Path stroke shadow has incorrect behavior when using ctx.scale(x,y)
Helder Correia
Reported 2010-11-29 18:16:14 PST
GraphicsContext::strokePath() in GraphicsContextQt.cpp needs to handle the special case where the context is scaled. The shadow offset must not be affected by the transformation.
Attachments
Patch (9.61 KB, patch)
2010-11-29 18:20 PST, Helder Correia
no flags
Helder Correia
Comment 1 2010-11-29 18:20:51 PST
WebKit Commit Bot
Comment 2 2010-11-30 02:20:24 PST
Comment on attachment 75096 [details] Patch Clearing flags on attachment: 75096 Committed r72900: <http://trac.webkit.org/changeset/72900>
WebKit Commit Bot
Comment 3 2010-11-30 02:20:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.