2010-11-30  Helder Correia  <helder@sencha.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Path stroke shadow has incorrect behavior when using ctx.scale(x,y)
        https://bugs.webkit.org/show_bug.cgi?id=50198

        New fast canvas test to ensure correct behavior of path stroke shadow
        when using scaling.

        * fast/canvas/canvas-scale-strokePath-shadow-expected.txt: Added.
        * fast/canvas/canvas-scale-strokePath-shadow.html: Added.
        * fast/canvas/script-tests/canvas-scale-strokePath-shadow.js: Added.
2010-11-30  Helder Correia  <helder@sencha.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Path stroke shadow has incorrect behavior when using ctx.scale(x,y)
        https://bugs.webkit.org/show_bug.cgi?id=50198

        Handle the special case when scaling is used and translate the shadow
        offset accordingly. The correct behavior is ensured in ContextShadow
        already, the issue only happens when using a non-blur shadow.

        Test: fast/canvas/canvas-scale-strokePath-shadow.html

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::strokePath):

Canonical link: https://commits.webkit.org/63359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72900 268f45cc-cd09-0410-ab3c-d52691b4dbfc